Fixed mini screen card issue and modal added
Cards now overflow when the screen is too small so texts won't go out of div box
Resume modal is added with its own animation

--- a/style/content.css
+++ b/style/content.css
@@ -151,6 +151,7 @@ p {
     border-width: 2px;
     border-radius: 6px;
     transform: rotateY(180deg);
+    overflow: scroll;
 
 }
 
