--- a/style/nav.css
+++ b/style/nav.css
@@ -96,6 +96,7 @@ nav a:hover {
     height: 100%;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .nav__toggle__label span,
